{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 50,
  "lineage": "69b8e485-6dcc-d667-bc3c-53cc9dee0fc8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500008043123:loadbalancer/app/clicksign-alb/7aaa9a90298a6020",
            "arn_suffix": "app/clicksign-alb/7aaa9a90298a6020",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clicksign-alb-1644452643.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:500008043123:loadbalancer/app/clicksign-alb/7aaa9a90298a6020",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clicksign-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a00dac83a5d98e7c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cc286cb183b9772"
              },
              {
                "subnet_id": "subnet-0c94943ce5c4799b2"
              }
            ],
            "subnets": [
              "subnet-04cc286cb183b9772",
              "subnet-0c94943ce5c4799b2"
            ],
            "vpc_id": "vpc-06c473def3ec6bd87",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500008043123:listener/app/clicksign-alb/7aaa9a90298a6020/da5209447ec206e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:500008043123:targetgroup/clicksign-tg/5fd382a46692ae67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:500008043123:listener/app/clicksign-alb/7aaa9a90298a6020/da5209447ec206e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:500008043123:loadbalancer/app/clicksign-alb/7aaa9a90298a6020",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.this",
            "aws_alb_target_group.this",
            "aws_security_group.alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:500008043123:targetgroup/clicksign-tg/5fd382a46692ae67",
            "arn_suffix": "targetgroup/clicksign-tg/5fd382a46692ae67",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:500008043123:targetgroup/clicksign-tg/5fd382a46692ae67",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "clicksign-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06c473def3ec6bd87"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500008043123:security-group/sg-0a00dac83a5d98e7c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00dac83a5d98e7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "clicksign-alb-sg",
            "name_prefix": "",
            "owner_id": "500008043123",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c473def3ec6bd87"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500008043123:security-group/sg-0cdaf19af36bd68d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdaf19af36bd68d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a00dac83a5d98e7c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "clicksign-ecs-sg",
            "name_prefix": "",
            "owner_id": "500008043123",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c473def3ec6bd87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg"
          ]
        }
      ]
    }
  ]
}